-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6
-
None
-
a5cce7cbc95c4aea4a57bdee0d7d5e0a08d1a88b
I get these errors
QMetaObject::indexOfSignal: signal implicitWidthChanged() from QQuickTextEdit redefined in QQuickTextArea QMetaObject::indexOfSignal: signal implicitHeightChanged() from QQuickTextEdit redefined in QQuickTextArea
when running the following code
import QtQuick 2.0 import Qt.labs.controls 1.0 import QtQuick.Layouts 1.0 ApplicationWindow { visible: true width: 400 height: 400 RowLayout { TextArea { text: "Normal" } } }
There was a similar warning in QTBUG-42905.
| For Gerrit Dashboard: QTBUG-49371 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 157504,2 | Avoid "implicitWidth/Height redefined" warnings | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |