Avoid "implicitWidth/Height redefined" warnings

In the same way that QQuickImplicitSizeItem does.

Task-number: QTBUG-49371
Change-Id: I1a8315c41e49139a9375f66a5714493331d22318
Reviewed-by: Liang Qi <liang.qi@qt.io>
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>