tests/auto/controls/data/tst_textarea.qml
@@ -77,10 +77,16 @@ TestCase {
 
     function test_implicitSize() {
         var control = textArea.createObject(testCase)
+
+        var implicitWidthSpy = signalSpy.createObject(control, { target: control, signalName: "implicitWidthChanged"} )
+        var implicitHeightSpy = signalSpy.createObject(control, { target: control, signalName: "implicitHeightChanged"} )
         control.background.implicitWidth = 400
         control.background.implicitHeight = 200
         compare(control.implicitWidth, 400)
         compare(control.implicitHeight, 200)
+        compare(implicitWidthSpy.count, 1)
+        compare(implicitHeightSpy.count, 1)
+
         control.destroy()
     }
 
